<resources>
    <string name="app_name">MoviesApplication</string>


    <string name="email">Email</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="passwork">Mật khẩu</string>
    <string name="forget_passwod">Quên mật khẩu</string>
    <string name="facebook">Đăng nhập với Facebook</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="name">Họ tên</string>
    <string name="validate">Xác nhận mật khẩu</string>
    <string name="send">Gửi mật khẩu</string>
    <string name="text_email">"Hãy nhập email bạn đã dùng để tạo tài khoản"</string>
    <string name="note">Bạn chưa có tài khoản?</string>

    <string name="your_string_here"> <u>Đăng ký</u>.</string>
    <string name="dieukhoan"> <u>Điều khoản sử sụng</u>.</string>
    <string name="Quydinh"><u>Quy định bảo mật</u>.</string>


    <string name="input">Bằng việc chọn nút Đăng ký, bạn đã đồng ý với <u>Điều khoản sử sụng</u> và <u>Quy định bảo mật</u> của HFilm </string>

    <string name="facebook_app_id">535181724487825</string>
    <string name="fb_login_protocol_scheme">fb535181724487825</string>


    <string name="note_forgot">Hãy dùng email bạn đã dùng để tạo tài khoản</string>
    <string name="send_pass">Gửi mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu</string>
</resources>