<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".RegisterMainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dang_ky"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="40dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/name_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vui long nhap ho ten"
            android:textColor="@color/cam4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/email_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vui long nhap ho ten"
            android:textColor="@color/cam4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/pass_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vui long nhap ho ten"
            android:textColor="@color/cam4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/pass_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/passwork"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/mess_repass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vui long nhap ho ten"
            android:textColor="@color/cam4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:hint="@string/validate"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/dang_ky" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:id="@+id/closeRe"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/btnclose" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/law"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/input"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>